unpackaged/objects/Complaint_Assignment_Group__c.object
<CustomObject>
    <description>Object to recognize the different groups that can work on complaints.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Value__c</fullName>
        <label>Lookup Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Pesticides</fullName>
                </value>
                <value>
                    <fullName>Solid Waste/CalRecycle</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Division of Drinking Water</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Division of Water Quality</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Division of Water Rights</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Office of Enforcement</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 1 - North Coast</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 2 - San Francisco Bay</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 3 - Central Coast</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 4 - Los Angeles</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 5 - Central Valley</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 6 - Lahontan</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 7 - Colorado River Basin</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 8 - Santa Ana</fullName>
                </value>
                <value>
                    <fullName>SWRCB - Region 9 - San Diego</fullName>
                </value>
                <value>
                    <fullName>Department of Toxic Substances Control</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Department of Toxic Substances Control - Northern</fullName>
                </value>
                <value>
                    <fullName>Department of Toxic Substances Control - Southern</fullName>
                </value>
                <value>
                    <fullName>Drinking Water</fullName>
                </value>
                <value>
                    <fullName>Water Rights</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>DTSC - Southern</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Pesticides</fullName>
                </value>
                <value>
                    <fullName>Solid Waste</fullName>
                </value>
                <value>
                    <fullName>Toxic Substances</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Complaint Assignment Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Type__c</columns>
        <columns>Lookup_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Complaint Assignment Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Assignment Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Type_And_Lookup_Value_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Type And Lookup Value Cannot Be Changed</description>
        <errorConditionFormula>AND(NOT($Setup.Disable_All_Validation_Rules__c.Value__c),NOT(ISNEW()),OR(ISCHANGED( Lookup_Value__c),ISCHANGED( Type__c )))</errorConditionFormula>
        <errorMessage>The Type and Lookup Value fields should not be changed.</errorMessage>
    </validationRules>
</CustomObject>